tests/diagnostics/catalog/snapshots/ir/IR0022.snap
error[IR0022]: IR_E_GENERIC_ARGUMENT_MISSING
 --> tests/diagnostics/catalog/sources/ir/IR0022.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0022
  = help: keep IR validation diagnostics structured and catalog-backed
